<resources>
    <string name="app_name">MyCineMov</string>
    <string name="search">Search</string>
    <string name="retry">Retry</string>
    <string name="home">Home</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="watchlist">Watchlist</string>
    <string name="share">Share</string>
    <string name="overview">Overview</string>
    <string name="guest_stars">Guest stars</string>
    <string name="your_library_is_empty">Your library is empty</string>
    <string name="watch_now">Watch now</string>
    <string name="undo">Undo</string>
    <string name="share_links">Share links</string>
    <string name="genre">Genre</string>
    <string name="sort">Sort</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="actors">Actors</string>
    <string name="actor_character">Actor Character:</string>
    <string name="superman">Superman</string>
    <string name="popularity_39_627">Popularity:39.627</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="popular">Popular</string>
    <string name="recent">Recent</string>
    <string name="poster">Poster</string>
    <string name="title_actor_or_topic">Title actor or topic</string>
    <string name="not_found">Not found</string>
    <string name="youtube">Youtube</string>
    <string name="muhammad_prafit_alvido_pratama">Muhammad Prafit Alvido Pratama</string>
    <string name="mprafitap_gmail_com">mprafitap@gmail.com</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_movie">Movies</string>
    <string name="title_favorite">Favorite</string>
    <string name="notification_empty">Opps .. The Data was empty</string>
    <string name="notification_error">Opps .. Something went Wrong</string>
    <string name="title_activity_movie_detail">Detail Movie</string>
    <string name="removed_from_favorite">Removed From Favorite</string>
    <string name="added_to_favorite">Added From Favorite</string>
    <string name="overview_title">Overview</string>
    <string name="tv_information_title">Information</string>
    <string name="btn_share">Share This Movie</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_search">Search</string>
    <string name="change_language_settings">Change Language</string>
    <string name="title_tv_shows">TvShows</string>
    <string name="title_dynamicfeature">favorite</string>
</resources>