<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:src="@drawable/photo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="204dp"
        android:contentDescription="@string/profile"/>

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileImage"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:text="@string/muhammad_prafit_alvido_pratama"
        android:textColor="@color/textColor"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameTextView"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:text="@string/mprafitap_gmail_com"
        android:textColor="@color/textColor_54"
        android:layout_marginTop="8dp"/>
</RelativeLayout>
