<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        android:theme="@style/AppTheme">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <ImageView
                android:id="@+id/poster_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="440dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/mytoolbar"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:collapsedTitleGravity="center"
                app:contentScrim="@color/colorPrimary"
                app:layout_collapseMode="pin">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal"
                    android:padding="6dp">

                    <ImageView
                        android:id="@+id/back_iv"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="6dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_baseline_keyboard_backspace_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:text="@string/youtube"
                        android:id="@+id/tv_movie_detail_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:ellipsize="marquee"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:textColor="@color/textColor"
                        android:textSize="22sp"
                        app:layout_constraintEnd_toStartOf="@id/play_iv"
                        app:layout_constraintStart_toEndOf="@id/back_iv"
                        app:layout_constraintTop_toTopOf="parent" />



                    <ImageView
                        android:id="@+id/play_iv"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="4dp"
                        android:padding="6dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_baseline_play_circle_outline_24"
                        app:layout_constraintEnd_toStartOf="@id/addToFavorite"
                        app:layout_constraintTop_toTopOf="@id/addToFavorite"
                        tools:ignore="ContentDescription" />



                    <ImageView
                        android:id="@+id/addToFavorite"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="6dp"
                        android:scaleType="centerCrop"
                        android:clickable="true"
                        android:contentDescription="@string/title_favorite"
                        android:focusable="true"
                        app:srcCompat="@drawable/ic_baseline_bookmark_border_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-36dp"
        android:background="@drawable/layout_back"
        android:elevation="5dp"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/all_data_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingTop="32dp"
                android:paddingBottom="60dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/tvTittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/tv_rating_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="3"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:elevation="10dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    app:drawableStartCompat="@drawable/ic_star_24"
                   />

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="14dp"
                    android:textColor="@color/textColor"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:text="@string/overview"/>

                <TextView
                    android:id="@+id/tv_overview_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:textColor="@color/textColor"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="14dp"
                    android:textColor="@color/textColor"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:text="@string/tv_information_title"/>

                <TextView
                    android:id="@+id/tv_information_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="4dp"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />



            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:scaleType="center"
        android:src="@drawable/ic_share_24dp"
        android:translationY="-36dp"
        app:borderWidth="0dp"
        app:fabCustomSize="80dp"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="center|bottom"
        app:maxImageSize="40dp"
        tools:ignore="ContentDescription" />





    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        app:layout_anchor="@id/appbar"
        android:visibility="gone"
        app:layout_anchorGravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>